# FastClaw

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yml
.claude/: frolicking-marinating-otter.md  task.json  tasks.json
.github/scripts/: fetch-rust-analyzer.sh
.github/workflows/: ci.yml  perf-gate.yml  release.yml  tauri-release.yml
.wps_claude/: align-cc-context-and-permissions.md  scalable-wibbling-marshmallow.md  task_o2.json  tasks.json
config/: default.json  exec-policy.toml
config/agents/: main.json
crates/fastclaw-agent/: Cargo.toml  README.md
crates/fastclaw-app/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
crates/fastclaw-cli/: Cargo.toml
crates/fastclaw-collab/: README.md
crates/fastclaw-context/: Cargo.toml
crates/fastclaw-core/: Cargo.toml  README.md
crates/fastclaw-eval/: Cargo.toml  README.md
crates/fastclaw-execpolicy/: Cargo.toml
crates/fastclaw-gateway/: Cargo.toml  README.md
crates/fastclaw-guardian/: Cargo.toml
crates/fastclaw-mcp/: Cargo.toml
crates/fastclaw-mcp/src/: lib.rs
crates/fastclaw-sandbox/: Cargo.toml
crates/fastclaw-sandbox/src/: bwrap.rs  landlock.rs  lib.rs  sandbox_policy.rs  seatbelt.rs
crates/fastclaw-sandbox/src/windows/: acl.rs  mod.rs  token.rs  wfp.rs
docs/: LLM_PLUGIN_GUIDE.md  MANUAL.md  channel-plugins.md  release-guide.md
prompts/: system-base.md  tool-usage-guide.md
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  memory_test.sh  merge-latest-json.sh  publish-release.sh  tauri-screenshot.sh
(+727 files in other folders)
