[package]
name = "fastclaw-mcp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
fastclaw-core = { path = "../fastclaw-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
futures.workspace = true

[dev-dependencies]
axum.workspace = true
