[package]
name = "fastclaw-sandbox"
version.workspace = true
edition.workspace = true
description = "OS-level process sandboxing for FastClaw (Landlock, Seatbelt, RestrictedToken)"

[lints]
workspace = true

[dependencies]
fastclaw-security = { path = "../fastclaw-security" }
fastclaw-path = { path = "../fastclaw-path" }
fastclaw-network-proxy = { path = "../fastclaw-network-proxy" }
tokio = { workspace = true, features = ["process"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "process"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc = "0.2"
seccompiler = "0.4"
which = "7"
